--- a/content/post/2020-03-27-india.md
+++ b/content/post/2020-03-27-india.md
@@ -40,7 +40,7 @@ O site para conseguir o E-Visa é absurdamente ruim e há vários sites não ofi
 
 Meu único trabalho foi ir até a copiadora perto de casa para ter uma imagem boa do meu passaporte digitalizado. Eu já tinha uma foto no estilo 3x4 e só precisei cortar para adequar ao tamanho solicitado. O passo a passo bem explicado estava no blog de viagem "Casal Wanderlust": https://casalwanderlust.com.br/como-solicitar-o-visto-para-a-india-atraves-da-internet-passo-a-passo/ 
 
-Levei o papel e deu tudo certo. É importante levar esse papel na bagegem de mão porque ele é solicitado quanto no check-in quanto na chegada à Índia. Não sei se eles aceitam quem leva o arquivo no celular, mas como a internet no aeroporto do exterior nunca é garantida, eu preferi levar em papel mesmo. 
+Levei o papel e deu tudo certo. É importante levar esse papel na bagegem de mão porque ele é solicitado tanto no check-in quanto na chegada à Índia. Não sei se eles aceitam quem leva o arquivo no celular, mas como a internet no aeroporto do exterior nunca é garantida, eu preferi levar em papel mesmo. 
 
 ### INTERNET
 No meu segundo dia em Delhi, eu peguei o metrô (aliás, você precisa passar em um detector de metal para usar o metrô) e fui até a região de Connaught Place. O comércio costuma abrir apenas por volta das 10h. Para quem estava com jet lag, como eu, e costumava acordar às 4h ou às 5h, isso era sempre uma dificuldade nos primeiros dias. Vale bastante a pena ter internet no celular. 
@@ -124,7 +124,7 @@ Mas, apesar disso, ainda havia muita gente nas ruas e também no trem. Eu não s
 
 Eu só percebi que eu poderia ficar presa na Índia em 19/3, quando eu li na imprensa indiana ("Times Now") que os voos internacionais seriam suspensos de 22/3 a 29/3. E na hora, é lógico, eu imaginei: eles vão manter os voos suspensos por bem mais tempo, e não só por uma semana. 
 
-O meu voo de volta seria em 28/3, e a Turkish Airlines não havia me comunicado nada. Já na hora eu mandei um e-mail para a Turkish, liguei para o callcenter e preenchi formulários para transferir o meu retorno para 21/3. Também enviei um e-mail para a Embaixada do Brasil em Delhi e para o Consulado do Brasil em Mumbai (onde eu estava naquele dia). A Turkish me respondeu e confirmou que o meu voo havia sido adiantado. Consegui, eu pensei.
+O meu voo de volta seria em 28/3, e a Turkish Airlines não havia me comunicado nada. Já na hora eu mandei um e-mail para a Turkish, liguei para o callcenter e preenchi formulários para transferir o meu retorno para 21/3. Também enviei um e-mail para a Embaixada do Brasil em Delhi e para o Consulado do Brasil em Mumbai (onde eu estava naquele dia). A Turkish me respondeu e confirmou que o meu voo havia sido antecipado. Consegui, eu pensei.
 
 Mantive contato com a embaixada pelo WhatsApp desde 19/3, e contei que tinha conseguido antecipar o voo e que aparentemente tudo daria certo. Eu estava em contato ainda com outras duas brasileiras (uma amiga é conhecida do meu tio; e a outra, filha da amiga da minha mãe). Procurei as duas, que também tentavam voltar ao Brasil desesperadamente, sem qualquer garantia naquele dia.
 
@@ -137,7 +137,7 @@ Depois de confirmada a minha antecipação do voo para o Brasil, eu fiquei basta
 
 Após embarcar na manhã de 21/3, o avião chegou a sair do portão e seguir para a área de decolagem. Eu estava com tanto sono que nem estranhei tanto que, depois, o avião tenha retornado ao portão. Eu achei que algum passageiro ainda precisava embarcar ou que havia algum problema técnico. A Turkish não chegou a servir bebida nem comida e ficamos mais de 4h esperando algum comunicado.
 
-Eu estava preocupada em perder a conexão e ficar presa no aeroporto de Istambul. O comandante falava que eles estavam consertando algo. Achei que talvez trocassem a gente de aeronave por algum problema técnico. Até que mandavam a gente sair do avião e voltar ao aeroporto.
+Eu estava preocupada em perder a conexão e ficar presa no aeroporto de Istambul. O comandante falava que eles estavam consertando algo. Achei que talvez trocassem a gente de aeronave por algum problema técnico. Até que mandaram a gente sair do avião e voltar ao aeroporto.
 
 No aeroporto, fomos comunicados que o voo estava cancelado e que o Aeroporto de Istambul havia suspendido os voos. Todos ficaram desesperados. Eu comecei a identificar e organizar os demais brasileiros para tentarmos achar uma solução juntos. O Vitor, da embaixada, que já estava em contato comigo desde 19/3, me ligou e pediu para eu também coletar o endereço em que cada pessoa ficaria em Delhi.
 
@@ -149,6 +149,6 @@ Novamente, o cartão de crédito dificultava a compra e exigia da minha mãe um 
 
 No Brasil, minha mãe conseguiu falar com o callcenter do cartão de crédito e pediu para liberarem a compra. Quando ela foi tentar comprar a passagem da Emirates, a única opção era a passagem na primeira classe e o valor era seis vezes mais caro. Com o medo de ter uma filha presa na Índia, minha mãe comprou a passagem.
 
-Voei de DEL - DXB na primeira classe do Boeing 777-300ER. Em Dubai, fiquei 14h esperando o próximo voo. O hotel e o lounge, a que os passageiros da primeira classe têm direito, estavam fechados. Depois, embarquei, aliviada, na primeira classe do A380-800 (aquele de dois andares) para o trecho final de DXB - GRU. Comi salmão defumado, tomei Chandon, água Perrier e Evian, fui muito bem tratada e cheguei aliviada ao Brasil para a minha quarentena. Mas certamente bastante traumatizada.
+Voei de DEL - DXB na primeira classe do Boeing 777-300ER. Em Dubai, fiquei 14h esperando o próximo voo. O hotel e o lounge, a que os passageiros da primeira classe têm direito, estavam fechados. Depois, embarquei na primeira classe do A380-800 (aquele de dois andares) para o trecho final de DXB - GRU. Comi salmão defumado, tomei Chandon, água Perrier e Evian, fui muito bem tratada e cheguei aliviada ao Brasil para a minha quarentena. Mas certamente bastante traumatizada.
 
 
